Implement authentication forwarding service to handle header and cookie propagation for subrequests